--- a/css/style.css
+++ b/css/style.css
@@ -5,5 +5,113 @@
 }
 
 body {
-    font-family: 'Open Sans', sans-serif;
+    background-color: #fff;
+    color: rgba(0,0,0,0.87);
+    font-family: 'Roboto', sans-serif;
+    font-size: 14px;
+    font-weight: 400;
+}
+
+header {
+    width: 100%;
+    background: #fff;
+    border-bottom: 1px solid #cbcbcb;
+    padding: 24px 24px 0 24px;
+    display: flex;
+    flex-direction: column;
+    position: fixed;
+}
+
+.header-top {
+    display: flex;
+    justify-content: flex-start;
+    line-height: 20px;
+}
+
+.logo img {
+    padding-right: 10px;
+}
+
+.titolo-pagina h2 {
+    color: #5f6368;
+    font-weight: 400;
+}
+
+.header-bottom {
+	display: flex;
+	padding: 15px 15px 0 0;
+}
+
+.header-bottom ul {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    list-style: none;
+}
+
+.header-bottom li {
+    font-weight: 500;
+	font-size: 15px;
+    color: grey;
+    text-decoration: none;
+	letter-spacing: 0;
+	margin-right: 42px;
+    padding-bottom: 5px;
+}
+
+#selected {
+	color: #3367d6;
+	padding-bottom: 6px;
+    border-bottom: 3px solid #3367d6;
+}
+
+main .container {
+    max-width: 970px;
+    margin: 0 auto;
+    padding: 30px;
+}
+
+.container h2 {
+    color: #3c4043;
+    font-weight: 500;
+    font-size: 24px;
+    line-height: 32px;
+    padding-top: 64px;
+}
+
+.container p {
+    padding-top: 20px;
+    margin-bottom: 10px;
+    line-height: 25px;
+    letter-spacing: .2px;
+}
+
+footer {
+    display: flex;
+    justify-content: center;
+    background: #f5f5f5;
+    font-size: 11px;
+    padding: 13px;
+}
+
+footer .container {
+    width: 69%;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.left ul {
+    display: flex;
+    list-style: none;
+}
+
+.left li {
+    color: grey;
+    padding-right: 9px;
+}
+
+.lingua {
+    padding-right: 90px;
 }
